# Market-Make

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DESIGN.md  README.md
.github/workflows/: ci.yml
acct/: accounting.hpp
apps/: mm_sim.cpp
apps/tools/: replay.cpp
book/: order_book.hpp
cfg/: risk.yaml  symbols.yaml
cfg/strat/: default.yaml
data/: sample_ticks.csv
include/: md_tick.hpp
lib/base/: result.hpp  types.hpp
lib/ipc/: spsc_queue.hpp
lib/math/: avellaneda_stoikov.hpp
lib/time/: clock.hpp
md/: csv_replayer.hpp  market_data.hpp
obs/: log.hpp
oms/: gateway.hpp  sim_gateway.hpp
risk/: risk_checks.hpp
sim/: exchange_sim.hpp
src/: csv_pub.cpp
strat/: avellaneda_stoikov.hpp  strategy.hpp
tests/: CMakeLists.txt  smoke_test.cpp
